<resources>
    <string name="app_name">BMI計算機</string>
    <string name="tv_old">年齢</string>
    <string name="tv_height">身長</string>
    <string name="tv_weight">体重</string>
    <string name="et_old"></string>
    <string name="et_height"></string>
    <string name="et_weight"></string>
    <string name="tv_anatano"></string>
    <string name="tv_taijyu"></string>
    <string name="tv_tekisei"></string>
    <string name="tv_kg"></string>
    <string name="bt_clear">クリア</string>
    <string name="bt_keisan">計算</string>
    <string name="dialog_msg">適切な肥満度を求めるためには、6歳未満の場合はカウプ指数が、6歳から15歳まではローレル指数が使われます。本アプリはBMIのみに対応しています。</string>
    <string name="dialog_btn_ok">確認</string>
    <string name="dialog_title">警告</string>
</resources>